--- a/_config.yml
+++ b/_config.yml
@@ -97,7 +97,7 @@ analytics:
 # Site Author
 author:
   name             : *name # *name is a YAML reference pointing to the &anchor earlier
-  avatar           : "/assets/images/go0dman_blue.png"
+  avatar           : "/assets/images/go0dman_logo.jpg"
   bio              : "EU Project"
   location         : 
   email            :
