--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,3 +4,7 @@ main:
     url: https://github.com/ADOxx-org/GO0DMAN-Innovation-Shop/
   - title: "Report an Issue"
     url: https://github.com/ADOxx-org/GO0DMAN-Innovation-Shop/issues
+  - title: "Categories"
+    url: /categories/
+  - title: "Tags"
+    url: /tags/
