--- a/_config.yml
+++ b/_config.yml
@@ -198,9 +198,9 @@ defaults:
       type: pages
     values:
       layout: single
-      author_profile: false
+      author_profile: true
       header:
-        overlay_image: /assets/images/header.jpg
+        image: /assets/images/header.jpg
   # _projects
   - scope:
       path: ""
@@ -213,7 +213,7 @@ defaults:
       read_time: true
       comments: false
       header:
-        overlay_image: /assets/images/header.jpg
+        image: /assets/images/header.jpg
 
 
 # Sass/SCSS
